# demo-ocp-to-rhoai

./: PRODUCTION_ARCHITECTURE.md  README.md
k8s/: openshift-template.yaml
py-worker/: Dockerfile  app.py  requirements.txt
rust-broker/: Cargo.toml  Dockerfile
rust-broker/src/: main.rs
rust-broker/static/ui/: app.js  index.html  styles.css
